# otus-cpp-professional

./: .gitignore
.github/workflows/: hw1.yml  hw2.yml
hw1_github_actions/: CMakeLists.txt  lib.cpp
hw2_ip_filter/: CMakeLists.txt  constants.h  ip_address.cpp  ip_address.h  main.cpp  utils.cpp  utils.h
hw2_ip_filter/unit_tests/: CMakeLists.txt  ipv4_address_tests.cpp  main.cpp  utils_tests.cpp
